--- a/js/dio/aulasTrilhaDIO/aula02/intex.html
+++ b/js/dio/aulasTrilhaDIO/aula02/intex.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/scripts.js"></script>
     <title>Teste com JS</title>
 </head>
 <body>
+    <h1>Início!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate qui repellendus harum perferendis ratione laborum aut tenetur omnis praesentium minima? Nam quisquam deleniti quas a vitae at qui voluptate iste!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, iste fugiat dolor ratione nam nobis magni, ex voluptas modi, ipsum laboriosam dignissimos magnam exercitationem animi reiciendis quaerat placeat ad mollitia! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis laudantium iusto hic autem ratione quae similique consectetur, earum quod id debitis enim? Ad quaerat commodi, quae suscipit dolores quod harum.</p>
+
+    <h2>Aprofundando...</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam deleniti, aspernatur numquam fugiat asperiores quibusdam, cupiditate maxime laboriosam modi vel molestiae fugit perferendis dolorem est illum obcaecati laborum quas animi! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat totam enim harum voluptatum mollitia blanditiis at molestias illo quos maiores ut, reprehenderit, sapiente animi. Officia cumque blanditiis inventore fuga commodi.</p>
     
 </body>
 </html>
